manifests/text-generation-webui/text-generation-webui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/oobabooga/text-generation-webui/
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"text-generation-webui:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"text-generation-webui\")].image","pause":"false"}]'
  labels:
    app: text-generation-webui
    app.kubernetes.io/component: text-generation-webui
    app.kubernetes.io/instance: text-generation-webui
    app.kubernetes.io/name: text-generation-webui
    app.kubernetes.io/part-of: text-generation-webui-app
  name: text-generation-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: text-generation-webui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: text-generation-webui
        deploymentconfig: text-generation-webui
    spec:
      containers:
      - command:
        - python
        - server.py
        - --listen
        - --api
        - --model
        - bigscience_bloom-1b7
        image: text-generation-webui:latest
        imagePullPolicy: Always
        name: text-generation-webui
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: /opt/app-root/src/models
          name: llms
      restartPolicy: Always
      volumes:
      - name: llms
        persistentVolumeClaim:
          claimName: llms
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/oobabooga/text-generation-webui/
  labels:
    app: text-generation-webui
    app.kubernetes.io/component: text-generation-webui
    app.kubernetes.io/instance: text-generation-webui
    app.kubernetes.io/name: text-generation-webui
    app.kubernetes.io/part-of: text-generation-webui-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.9-ubi8
  name: text-generation-webui
spec:
  ports:
  - name: rest-api
    port: 8080
    protocol: TCP
    targetPort: 5000
  - name: stream-api
    port: 5005
    protocol: TCP
    targetPort: 5005
  - name: web
    port: 7860
    protocol: TCP
    targetPort: 7860
  selector:
    app: text-generation-webui
    deploymentconfig: text-generation-webui
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: text-generation-webui
    app.kubernetes.io/component: text-generation-webui
    app.kubernetes.io/instance: text-generation-webui
    app.kubernetes.io/name: text-generation-webui
    app.kubernetes.io/part-of: text-generation-webui-app
  name: text-generation-webui
spec:
  to:
    kind: Service
    name: text-generation-webui
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: text-generation-webui
    app.kubernetes.io/component: text-generation-webui
    app.kubernetes.io/instance: text-generation-webui
    app.kubernetes.io/name: text-generation-webui
    app.kubernetes.io/part-of: text-generation-webui-app
  name: text-generation-api
spec:
  path: "/api"
  to:
    kind: Service
    name: text-generation-webui
  port:
    targetPort: rest-api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: text-generation-webui
    app.kubernetes.io/component: text-generation-webui
    app.kubernetes.io/instance: text-generation-webui
    app.kubernetes.io/name: text-generation-webui
    app.kubernetes.io/part-of: text-generation-webui-app
  name: text-generation-stream
spec:
  path: "/api/v1/stream"
  to:
    kind: Service
    name: text-generation-webui
  port:
    targetPort: stream-api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
